section 1 - read more

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-	<my-message id="my-message"></my-message>
 	<section id="section1">
 		<div id="section1Container">
 			<h1>Welcome!</h1>
@@ -26,16 +25,14 @@
 					<p>
 						I'm Djalmir Miodutzki.<br />
 						<br />
-						I started my programming journey with Delphi at the age of 16, but it was with Javascript that I truly found my passion. Since then, I have developed several skills and become a pure JavaScript expert, with extensive experience in Vue.js and NodeJS.<br />
-						During my career, I have had the opportunity to develop some professional applications from scratch, which are generating profit for their owners. These projects have allowed me to apply and expand my technical knowledge in front-end and back-end development.<br />
+						I started my programming journey with Delphi at the age of 16, but it was with Javascript that I truly found my passion. Since then, I have deepened my knowledge in pure JS and gained extensive experience in Vue.js and NodeJS.<br />
+						During my career, I have had the opportunity to develop some professional applications from scratch. These projects have allowed me to apply and expand my technical knowledge in front-end and back-end development.
+					<details>
+						<summary style="cursor: pointer; font-size: 0.8rem; font-weight: bold;">Read more</summary>
 						<br />
-
 						I have the ability to quickly learn and use any Javascript framework or library with little time spent studying. However, I firmly believe that less is more and I prefer solutions with fewer external dependencies, prioritizing clean and efficient code.<br />
-						I learned to program in an environment without internet access and without mentors, which provided me with a solid and self-taught foundation. Minimizing the technical challenges of professional environments.<br />
-						One of my strengths is the ability to mentor novice developers, helping them evolve and excel in their careers.<br />
-						I consider my practical projects and professional experiences as the best proof of my skills. I am always aware of the most reliable sources on the internet to keep myself updated with the new trends and technologies in the sector.<br />
-						<br />
-						Learning is constant and enjoyable!
+						I learned to program in an environment without internet access and without mentors, which provided me with a solid and self-taught foundation. Minimizing the technical challenges of professional environments.
+					</details>
 					</p>
 				</div>
 			</div>
@@ -136,7 +133,8 @@
 	</div>
 
 	<script src="index.js"></script>
-	<script src="https://cdn.jsdelivr.net/gh/Djalmir/zionCarousel/carousel.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/gh/Djalmir/zionCarousel/carousel.js"></script> -->
+	 <script src="carousel.js"></script>
 </body>
 
 </html>
