--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 					<details>
 						<summary style="cursor: pointer; font-size: 0.8rem; font-weight: bold;">Read more</summary>
 						<br />
-						I have the ability to quickly learn and use any Javascript framework or library with little time spent studying. However, I firmly believe that less is more and I prefer solutions with fewer external dependencies, prioritizing clean and efficient code.<br />
-						I learned to program in an environment without internet access and without mentors, which provided me with a solid and self-taught foundation. Minimizing the technical challenges of professional environments.
+						I have the ability to quickly learn and use any Javascript framework or library with little time spent studying. However, I prefer solutions with fewer external dependencies, prioritizing clean and efficient code.<br />
+						I learned to program in an environment without internet access and without mentors, which provided me with a solid and self-taught foundation, minimizing the technical challenges of professional environments.
 					</details>
 					</p>
 				</div>
