--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						</p>
 					</div>
 					<div class="aContainer innerLi">
-						<a href="https://djalmir.github.io/Games" target="_blank">
+						<a href="https://games.razion.app.br" target="_blank">
 							<button class="blueBt">Visit Site</button>
 						</a>
 					</div>
