--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
 				If you wish to see the codes, feel free to browse all my repositories on <a href="https://github.com/Djalmir?tab=repositories" target="_blank">Github</a>
 			</p>
 
+			<div id="contacts">
+				<b>Contacts:</b>
+				<div>
+					<a href="https://www.linkedin.com/messaging/compose?recipient=djalmir-miodutzki" target="_blank" rel="noopener noreferrer" title="LinkedIn">
+						<img class="contactSvg" src="imgs/linkedin.svg" alt="linkedin image">
+					</a>
+					<a href="https://wa.me/5547988956620" target="_blank" rel="noopener noreferrer" title="WhatsApp">
+						<img class="contactSvg" src="imgs/message-circle.svg" alt="WhatsApp image">
+					</a>
+					<a href="mailto:djalmir_miodutzki@hotmail.com" target="_blank" rel="noopener noreferrer" title="Email">
+						<img class="contactSvg" src="imgs/mail.svg" alt="email image">
+					</a>
+				</div>
+			</div>
+
 			<button id="scrollDownBt" class="blueBt" title="scrollDown" onclick="document.querySelector('#section2').scrollIntoView()"></button>
 		</div>
 	</section>
@@ -63,7 +78,7 @@
 						<b>Task Board</b>
 						<hr />
 					</div>
-					<zion-carousel srcs="imgs/taskboard (1).png,imgs/taskboard (2).png,imgs/taskboard (3).png,imgs/taskboard (4).png,imgs/taskboard (5).png"></zion-carousel>
+					<zion-carousel srcs="imgs/taskboard (1).png, imgs/taskboard (2).png, imgs/taskboard (3).png, imgs/taskboard (4).png, imgs/taskboard (5).png"></zion-carousel>
 					<div class="first innerLi">
 						<p>
 							Minimalist Kanban for teams focused on productivity.
@@ -93,7 +108,7 @@
 						<b>Games</b>
 						<hr />
 					</div>
-					<zion-carousel srcs="imgs/games (1).png,imgs/games (2).png,imgs/games (3).png,imgs/games (4).png"></zion-carousel>
+					<zion-carousel srcs="imgs/games (1).png, imgs/games (2).png, imgs/games (3).png, imgs/games (4).png"></zion-carousel>
 					<div class="first innerLi">
 						<p>Have fun!</p>
 						<p>
@@ -122,7 +137,7 @@
 						<b>Video editor portfolio</b>
 						<hr />
 					</div>
-					<zion-carousel srcs="imgs/video-editor (1).png,imgs/video-editor (2).png"></zion-carousel>
+					<zion-carousel srcs="imgs/video-editor (1).png, imgs/video-editor (2).png, imgs/video-editor (3).png"></zion-carousel>
 					<div class="first innerLi">
 						<p>
 							Portfolio for a video editor with rotating texts and an interactive 3D smartphone.
@@ -150,7 +165,7 @@
 						<b>Leads Dashboard</b>
 						<hr />
 					</div>
-					<zion-carousel srcs="imgs/dashboard (1).png,imgs/dashboard (2).png,imgs/dashboard (3).png,imgs/dashboard (4).png,imgs/dashboard (5).png,imgs/dashboard (6).png"></zion-carousel>
+					<zion-carousel srcs="imgs/dashboard (1).png, imgs/dashboard (2).png, imgs/dashboard (3).png, imgs/dashboard (4).png, imgs/dashboard (5).png, imgs/dashboard (6).png"></zion-carousel>
 					<div class="first innerLi">
 						<p>
 							Administrative dashboard for viewing leads. With maps showing the approximate location of website accesses.
@@ -183,7 +198,7 @@
 				<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 				<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
 			</small>
-			<span>Copyright &copy; 2021 - by <a href="https://github.com/Djalmir" target="_blank" rel="noopener noreferrer">Djalmir Miodutzki</a></span>
+			<span>Copyright &copy; 2021 - by <a href="https://www.linkedin.com/in/djalmir-miodutzki/" target="_blank" rel="noopener noreferrer">Djalmir Miodutzki</a></span>
 			<button id="hideInterfaceBt" onclick="showHideInterface()">
 				<span id="hideInterfaceBtSpan">Hide Interface</span>
 				<img src="/imgs/eye.svg" id="eyeImg" alt="eye image">
