--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#001133">
 	<link rel="stylesheet" href="index.css">
-	<link rel="icon" href="favicon.ico" />
+	<link rel="icon" href="razion-logo.svg" />
 	<title>Djalmir's Projects</title>
 </head>
 
@@ -75,7 +75,7 @@
 			<ul>
 				<li>
 					<div>
-						<b>Task Board</b>
+						<b>TaskBoard</b>
 						<hr />
 					</div>
 					<zion-carousel srcs="imgs/taskboard (1).png, imgs/taskboard (2).png, imgs/taskboard (3).png, imgs/taskboard (4).png, imgs/taskboard (5).png"></zion-carousel>
@@ -88,7 +88,7 @@
 						</p>
 					</div>
 					<div class="aContainer innerLi">
-						<a href="https://taskBoard.razion.app.br" target="_blank" rel="noopener noreferrer">
+						<a href="https://taskBoard.razion.games" target="_blank" rel="noopener noreferrer">
 							<button class="blueBt">Visit Site</button>
 						</a>
 					</div>
@@ -99,6 +99,64 @@
 							<span>Technologies used in this project:</span><br />
 							<img src="https://img.shields.io/badge/-Vue 3-202020?style=flat&logo=vue.js" alt="js badge" class="badge" />
 							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
+						</small>
+					</div>
+				</li>
+
+				<li>
+					<div>
+						<b>Razion Landing Page</b>
+						<hr />
+					</div>
+					<zion-carousel srcs="imgs/lp1.png, imgs/lp2.png"></zion-carousel>
+					<div class="first innerLi">
+						<p>
+							Landing page for Razion.
+						</p>
+						<p>
+							With a modern and dynamic design, the landing page for Razion is a must-visit for anyone interested in the company's products and services.
+						</p>
+					</div>
+					<div class="aContainer innerLi">
+						<a href="https://lp.razion.games" target="_blank" rel="noopener noreferrer">
+							<button class="blueBt">Visit Site</button>
+						</a>
+					</div>
+					<br />
+					<hr />
+					<div class="innerLi">
+						<small>
+							<span>Technologies used in this project:</span><br />
+							<img src="https://img.shields.io/badge/-Vue 3-202020?style=flat&logo=vue.js" alt="js badge" class="badge" />
+							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
+						</small>
+					</div>
+				</li>
+
+				<li>
+					<div>
+						<b>Smartphone WebComponent</b>
+						<hr />
+					</div>
+					<zion-carousel srcs="imgs/Smartphone1.png, imgs/Smartphone2.png, imgs/Smartphone3.png, imgs/Smartphone4.png, imgs/Smartphone5.png"></zion-carousel>
+					<div class="first innerLi">
+						<p>
+							The <smartphone-3d> is a custom web component that renders a highly detailed, interactive 3D smartphone visualization. This component allows for various transformations, animations, and interaction modes.
+						</p>
+					</div>
+					<div class="aContainer innerLi">
+						<a href="https://github.com/Djalmir/3D-Smartphone" target="_blank" rel="noopener noreferrer">
+							<button class="blueBt">View on Github</button>
+						</a>
+					</div>
+					<br />
+					<hr>
+					<div class="innerLi">
+						<small>
+							<span>Technologies used in this project:</span><br />
+							<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+							<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
 						</small>
 					</div>
 				</li>
@@ -116,7 +174,7 @@
 						</p>
 					</div>
 					<div class="aContainer innerLi">
-						<a href="https://games.razion.app.br" target="_blank" rel="noopener noreferrer">
+						<a href="https://razion.games" target="_blank" rel="noopener noreferrer">
 							<button class="blueBt">Visit Site</button>
 						</a>
 					</div>
@@ -131,61 +189,7 @@
 						</small>
 					</div>
 				</li>
-
-				<li>
-					<div>
-						<b>Video editor portfolio</b>
-						<hr />
-					</div>
-					<zion-carousel srcs="imgs/video-editor (1).png, imgs/video-editor (2).png, imgs/video-editor (3).png"></zion-carousel>
-					<div class="first innerLi">
-						<p>
-							Portfolio for a video editor with rotating texts and an interactive 3D smartphone.
-						</p>
-					</div>
-					<div class="aContainer innerLi">
-						<a href="https://hosamaoliveira.github.io/" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">Visit Site</button>
-						</a>
-					</div>
-					<br />
-					<hr>
-					<div class="innerLi">
-						<small>
-							<span>Technologies used in this project:</span><br />
-							<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
-							<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
-						</small>
-					</div>
-				</li>
-
-				<li>
-					<div>
-						<b>Leads Dashboard</b>
-						<hr />
-					</div>
-					<zion-carousel srcs="imgs/dashboard (1).png, imgs/dashboard (2).png, imgs/dashboard (3).png, imgs/dashboard (4).png, imgs/dashboard (5).png, imgs/dashboard (6).png"></zion-carousel>
-					<div class="first innerLi">
-						<p>
-							Administrative dashboard for viewing leads. With maps showing the approximate location of website accesses.
-						</p>
-					</div>
-					<div class="aContainer innerLi">
-						<a href="https://razion.app.br" target="_blank" rel="noopener noreferrer">
-							<button class="blueBt">Visit Site</button>
-						</a>
-					</div>
-					<br />
-					<hr />
-					<div class="innerLi">
-						<small>
-							<span>Technologies used in this project:</span><br />
-							<img src="https://img.shields.io/badge/-Vue 3-202020?style=flat&logo=vue.js" alt="js badge" class="badge" />
-							<img src="https://img.shields.io/badge/-Node.js-202020?style=flat&logo=node.js" alt="js badge" class="badge" />
-						</small>
-					</div>
-				</li>
+				
 			</ul>
 		</div>
 
